--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ span{
 		<br>
 		<span class = "StyleFont">Car 2 Name</span><input type="text" placeholder="Name of Car 2" id = "Car2"></input>
 		<br>
-		<button class="StyleFont" onclick="NameStore()">Submit Names</button>
+		<button class="StyleFont" onClick="NameStore()">Submit Names</button>
 	</section>
 	<section style = "visibility: hidden;" id = "Gotham Tiblis">
 		<center>
